--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "Portfolio-maker app",
   "main": "server.js",
   "scripts": {
-   "start" : "node server.js",
-   "server" : "nodemon server.js"
-   },
+    "start": "node server.js",
+    "server": "nodemon server.js"
+  },
   "author": "agrit",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.11.10",
+    "normalize-url": "^5.3.0"
   }
 }
